<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:background="#f5f5f5"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/open_sans_bold"
        android:gravity="center"
        android:text="@string/choose_language"
        android:textColor="@android:color/black"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:id="@+id/ll_english"
        android:layout_marginTop="32dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rb_eng"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:buttonTint="@color/colorAccent"
            android:checked="false"
            android:drawablePadding="12dp"
            android:duplicateParentState="true" />

        <TextView
            android:id="@+id/tv_english"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/open_sans_semi_bold"
            android:text="@string/english_string"
            android:textColor="@android:color/black"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:id="@+id/ll_arabic"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rb_arabic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:buttonTint="@color/colorAccent"
            android:checked="false"
            android:drawablePadding="12dp"
            android:duplicateParentState="true" />

        <TextView
            android:id="@+id/tv_arabic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/open_sans_semi_bold"
            android:text="@string/arabic_string"
            android:textColor="@android:color/black"
            android:textSize="18sp" />
    </LinearLayout>


    <Button
        android:id="@+id/btn_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:height="44dp"
        android:background="@drawable/bg_orange_btn_curve"
        android:fontFamily="@font/open_sans_bold"
        android:gravity="center_vertical"
        android:paddingStart="44dp"
        android:paddingEnd="44dp"
        android:text="@string/submit_string"
        android:textColor="@android:color/black" />
</LinearLayout>