<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:padding="0dp"
        app:layout_collapseMode="pin"
        app:layout_scrollFlags="scroll|snap"
        app:titleTextColor="@color/colorPrimary">

        <include layout="@layout/toolbar_home" />

    </com.google.android.material.appbar.AppBarLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/open_sans_semi_bold"
            android:paddingStart="@dimen/marginProductDetails"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:text="@string/change_password"
            android:textColor="@android:color/black"
            android:textSize="22sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg_primary_dark_curve"
            android:orientation="vertical"
            android:paddingStart="@dimen/marginProductDetails"
            android:paddingTop="@dimen/marginProductDetails"
            android:paddingEnd="@dimen/marginProductDetails">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/open_sans_regular"
                android:text="@string/current_password"
                android:textColor="@color/colorGray"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/et_current_password"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:layout_marginTop="4dp"
                android:background="@drawable/bg_edit_text_white_round"
                android:gravity="center_vertical"
                android:inputType="textPassword"
                android:paddingStart="12dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/open_sans_regular"
                android:text="@string/new_password_string"
                android:textColor="@color/colorGray"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/et_new_password"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:layout_marginTop="4dp"
                android:background="@drawable/bg_edit_text_white_round"
                android:gravity="center_vertical"
                android:inputType="textPassword"
                android:paddingStart="12dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/open_sans_regular"
                android:text="@string/confirm_new_password_string"
                android:textColor="@color/colorGray"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/et_conf_new_password"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:layout_marginTop="4dp"
                android:background="@drawable/bg_edit_text_white_round"
                android:gravity="center_vertical"
                android:inputType="textPassword"
                android:paddingStart="12dp" />

            <Button
                android:id="@+id/btn_save"
                android:layout_width="wrap_content"
                android:layout_height="44dp"
                android:layout_gravity="center"
                android:layout_marginTop="36dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/bg_orange_btn_curve"
                android:fontFamily="@font/open_sans_bold"
                android:paddingStart="56dp"
                android:paddingEnd="56dp"
                android:text="@string/save_string"
                android:textColor="@android:color/white" />

        </LinearLayout>
    </LinearLayout>

</LinearLayout>