<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:padding="0dp"
        app:layout_collapseMode="pin"
        app:layout_scrollFlags="scroll|snap"
        app:titleTextColor="@color/colorPrimary">

        <include layout="@layout/toolbar_home" />

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/open_sans_semi_bold"
                android:paddingStart="@dimen/marginProductDetails"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:text="@string/login_text"
                android:textColor="@android:color/black"
                android:textSize="22sp" />

            <LinearLayout
                android:id="@+id/tv_forgot_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_primary_dark_curve"
                android:orientation="vertical"
                android:paddingStart="@dimen/marginProductDetails"
                android:paddingTop="@dimen/marginProductDetails"
                android:paddingEnd="@dimen/marginProductDetails">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="12dp"
                    android:fontFamily="@font/open_sans_regular"
                    android:text="@string/email_string"
                    android:textColor="@color/colorGray"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/et_email"
                    android:layout_width="match_parent"
                    android:layout_height="44dp"
                    android:layout_marginTop="4dp"
                    android:background="@drawable/bg_edit_text_white_round"
                    android:gravity="center_vertical|start"
                    android:inputType="textEmailAddress"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp" />

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="12dp"
                    android:fontFamily="@font/open_sans_regular"
                    android:text="@string/password_string"
                    android:textColor="@color/colorGray"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="44dp"
                    android:layout_marginTop="4dp"
                    android:background="@drawable/bg_edit_text_white_round"
                    android:gravity="center_vertical|start"
                    android:inputType="textPassword"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="24dp"
                    android:fontFamily="@font/open_sans_regular"
                    android:gravity="end"
                    android:text="@string/forgot_password_string"
                    android:textColor="@color/colorGray"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/btn_login"
                    android:layout_width="wrap_content"
                    android:layout_height="44dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="12dp"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/bg_orange_btn_curve"
                    android:fontFamily="@font/open_sans_bold"
                    android:paddingStart="56dp"
                    android:paddingEnd="56dp"
                    android:text="@string/sign_in_text"
                    android:textColor="@android:color/white" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/bg_white_curve"
                android:orientation="vertical"
                android:paddingTop="24dp"
                android:paddingBottom="24dp">

                <LinearLayout
                    android:id="@+id/ll_facebook_login"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginStart="@dimen/marginProductDetails"
                    android:layout_marginEnd="@dimen/marginProductDetails"
                    android:background="@drawable/bg_blue_round_button"
                    android:orientation="horizontal">

                    <com.facebook.login.widget.LoginButton
                        android:id="@+id/fb_login_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="30dp"
                        android:visibility="gone"
                        android:layout_marginBottom="30dp" />
                    <ImageView
                        android:layout_width="44dp"
                        android:layout_height="44dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="32dp"
                        android:padding="8dp"
                        android:src="@drawable/ic_facebook" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="12dp"
                        android:fontFamily="@font/open_sans_regular"
                        android:gravity="center"
                        android:text="@string/sign_in_facebook_text"
                        android:textColor="@android:color/white"
                        android:textSize="18sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_google_login"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginStart="@dimen/marginProductDetails"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="@dimen/marginProductDetails"
                    android:background="@drawable/bg_white_round_button"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="44dp"
                        android:layout_height="44dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="32dp"
                        android:padding="8dp"
                        android:src="@drawable/ic_google" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="12dp"
                        android:fontFamily="@font/open_sans_regular"
                        android:gravity="center"
                        android:text="@string/sign_in_google_text"
                        android:textColor="@android:color/black"
                        android:textSize="18sp" />
                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/open_sans_regular"
                    android:gravity="center"
                    android:text="@string/dont_have_account_string"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tv_register_now"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:fontFamily="@font/open_sans_semi_bold"
                    android:gravity="center"
                    android:text="@string/register_now_string"
                    android:textColor="@color/colorAccent"
                    android:textSize="22sp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>