<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="bottom"
    android:background="@drawable/bg_color_bottom_sheet"
    android:clickable="true"
    android:orientation="vertical"
    android:visibility="visible">

    <ImageView
        android:id="@+id/img_close_sheet"
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="24dp"
        android:src="@drawable/ic_close_sheet" />

    <LinearLayout
        android:id="@+id/ll_store"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/img_close_sheet"
        android:layout_marginStart="24dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rb_store"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:duplicateParentState="true"
            android:checked="false"
            android:buttonTint="@color/colorAccent"
            android:drawablePadding="12dp" />

        <TextView
            android:id="@+id/tv_store"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/open_sans_bold"
            android:text="@string/collect_from_store_string"
            android:textColor="@android:color/black"
            android:textSize="18sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_change_shop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/img_close_sheet"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="24dp"
        android:fontFamily="@font/open_sans_semi_bold"
        android:text="@string/change_string"
        android:textColor="@color/colorAccent"
        android:textSize="16sp" />

    <LinearLayout
        android:id="@+id/ll_home_delivery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll_store"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="24dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rb_home_delivery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:duplicateParentState="true"
            android:layout_gravity="center"
            android:checked="false"
            android:buttonTint="@color/colorAccent"
            android:drawablePadding="12dp" />

        <TextView
            android:id="@+id/tv_home_delivery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/open_sans_bold"
            android:text="@string/deliver_to_my_location_text"
            android:textColor="@android:color/black"
            android:textSize="18sp" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_delivery_done"
        android:layout_width="wrap_content"
        android:layout_height="44dp"
        android:layout_below="@+id/ll_home_delivery"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="24dp"
        android:background="@drawable/bg_orange_btn_curve"
        android:fontFamily="@font/open_sans_bold"
        android:paddingStart="36dp"
        android:paddingEnd="36dp"
        android:text="@string/done_string"
        android:textColor="@android:color/white" />
</RelativeLayout>